--- a/w2/index.html
+++ b/w2/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="output"></div>
-    <script src="/w2/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
